Fix wrapping to break long strings but leave words intact (#2320)

--- a/src/amo/css/AddonReviewList.scss
+++ b/src/amo/css/AddonReviewList.scss
@@ -40,7 +40,7 @@
 }
 
 .AddonReviewList-li {
-  word-break: break-all;
+  word-wrap: break-word;
 
   > h3 {
     padding: 0;
